kubernetes/apps/media/immich/app/server/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:image-album
    hajimari.io/group: home
    hajimari.io/appName: Immich
spec:
  hostnames:
    - "shashin.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
